// Vitest Snapshot v1

exports[`SwipeCell > SwipeCell doubleVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
>
  <div
    class="tdesign-mobile-demo-block__header"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
    >
      左右滑操作
    </p>
  </div>
  <div
    class="tdesign-mobile-demo-block__slot"
  >
    
    <div
      class="t-swipe-cell"
    >
      <div
        style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          
          <div
            class="btn favor-btn"
          >
            选择
          </div>
          
        </div>
        
        <div
          class="t-cell t-cell--middle"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            左右滑操作
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__note"
          >
            辅助信息
          </div>
          <!--v-if-->
        </div>
        
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          <div
            class="btn favor-btn"
          >
            收藏
          </div>
          <div
            class="btn delete-btn"
          >
            删除
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`SwipeCell > SwipeCell eventVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
>
  <div
    class="tdesign-mobile-demo-block__header"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
    >
      带二次确认的操作
    </p>
  </div>
  <div
    class="tdesign-mobile-demo-block__slot"
  >
    
    <div
      class="t-swipe-cell"
    >
      <div
        style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          
          <div
            class="btn edit-btn"
          >
            编辑
          </div>
          <div
            class="btn delete-btn"
          >
            删除
          </div>
          
        </div>
        
        <div
          class="t-cell t-cell--middle"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            带二次确认的操作
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__note"
          >
            辅助信息
          </div>
          <!--v-if-->
        </div>
        
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          <div
            class="btn edit-btn"
          >
            编辑
          </div>
          <div
            class="btn delete-btn"
          >
            删除
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`SwipeCell > SwipeCell iconVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带图标的滑动操作
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              图标加文字横排
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            <div
              class="t-swipe-cell__content btn edit-btn"
              style="height: 100%;"
            >
              <svg
                class="t-icon t-icon-edit-1 t-swipe-cell__icon"
                fill="none"
                height="1em"
                style="font-size: 16px;"
                viewBox="0 0 16 16"
                width="1em"
              >
                <g
                  fill="currentColor"
                  fill-opacity="0.9"
                  opacity="0.9"
                >
                  <path
                    d="M14.13 4.95L10.9 1.71l.7-.71 3.25 3.24-.7.71zM5.97 13.11l-3.61.72a.3.3 0 01-.35-.35l.72-3.61 7.3-7.3 3.24 3.24-7.3 7.3zm5.89-7.3l-1.83-1.83-6.38 6.38-.46 2.29 2.29-.46 6.38-6.38zM15 11h-4v1h4v-1zM15 13H8.5v1H15v-1z"
                  />
                </g>
              </svg>
              <span
                class="t-swipe-cell__text"
              >
                编辑
              </span>
            </div>
            <div
              class="t-swipe-cell__content btn delete-btn"
              style="height: 100%;"
            >
              <svg
                class="t-icon t-icon-delete t-swipe-cell__icon"
                fill="none"
                height="1em"
                style="font-size: 16px;"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6 12V6h1v6H6zM9 6v6h1V6H9z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M10.5 3H14v1h-1v10a1 1 0 01-1 1H4a1 1 0 01-1-1V4H2V3h3.5V1.8c0-.44.36-.8.8-.8h3.4c.44 0 .8.36.8.8V3zm-4 0h3V2h-3v1zM4 4v10h8V4H4z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <span
                class="t-swipe-cell__text"
              >
                删除
              </span>
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              纯图标
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            <div
              class="t-swipe-cell__content btn edit-btn"
              style="height: 100%;"
            >
              <svg
                class="t-icon t-icon-edit-1 t-swipe-cell__icon"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <g
                  fill="currentColor"
                  fill-opacity="0.9"
                  opacity="0.9"
                >
                  <path
                    d="M14.13 4.95L10.9 1.71l.7-.71 3.25 3.24-.7.71zM5.97 13.11l-3.61.72a.3.3 0 01-.35-.35l.72-3.61 7.3-7.3 3.24 3.24-7.3 7.3zm5.89-7.3l-1.83-1.83-6.38 6.38-.46 2.29 2.29-.46 6.38-6.38zM15 11h-4v1h4v-1zM15 13H8.5v1H15v-1z"
                  />
                </g>
              </svg>
              <!--v-if-->
            </div>
            <div
              class="t-swipe-cell__content btn delete-btn"
              style="height: 100%;"
            >
              <svg
                class="t-icon t-icon-delete t-swipe-cell__icon"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6 12V6h1v6H6zM9 6v6h1V6H9z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M10.5 3H14v1h-1v10a1 1 0 01-1 1H4a1 1 0 01-1-1V4H2V3h3.5V1.8c0-.44.36-.8.8-.8h3.4c.44 0 .8.36.8.8V3zm-4 0h3V2h-3v1zM4 4v10h8V4H4z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <!--v-if-->
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              图标加文字竖排
              <!--v-if-->
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            <div
              class="t-swipe-cell__content btn edit-btn vertical"
              style="height: 100%;"
            >
              <svg
                class="t-icon t-icon-edit-1 t-swipe-cell__icon"
                fill="none"
                height="1em"
                style="font-size: 16px;"
                viewBox="0 0 16 16"
                width="1em"
              >
                <g
                  fill="currentColor"
                  fill-opacity="0.9"
                  opacity="0.9"
                >
                  <path
                    d="M14.13 4.95L10.9 1.71l.7-.71 3.25 3.24-.7.71zM5.97 13.11l-3.61.72a.3.3 0 01-.35-.35l.72-3.61 7.3-7.3 3.24 3.24-7.3 7.3zm5.89-7.3l-1.83-1.83-6.38 6.38-.46 2.29 2.29-.46 6.38-6.38zM15 11h-4v1h4v-1zM15 13H8.5v1H15v-1z"
                  />
                </g>
              </svg>
              <span
                class="t-swipe-cell__text"
              >
                编辑
              </span>
            </div>
            <div
              class="t-swipe-cell__content btn delete-btn vertical"
              style="height: 100%;"
            >
              <svg
                class="t-icon t-icon-delete t-swipe-cell__icon"
                fill="none"
                height="1em"
                style="font-size: 16px;"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6 12V6h1v6H6zM9 6v6h1V6H9z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M10.5 3H14v1h-1v10a1 1 0 01-1 1H4a1 1 0 01-1-1V4H2V3h3.5V1.8c0-.44.36-.8.8-.8h3.4c.44 0 .8.36.8.8V3zm-4 0h3V2h-3v1zM4 4v10h8V4H4z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <span
                class="t-swipe-cell__text"
              >
                删除
              </span>
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`SwipeCell > SwipeCell leftVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        左滑动操作
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              左滑单操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            <div
              class="btn delete-btn"
            >
              删除
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              左滑单操作
              <!--v-if-->
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            <div
              class="btn delete-btn"
            >
              删除
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              左滑双操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            <div
              class="t-swipe-cell__content btn edit-btn"
              style="height: 100%;"
            >
              <!--v-if-->
              <span
                class="t-swipe-cell__text"
              >
                编辑
              </span>
            </div>
            <div
              class="t-swipe-cell__content btn delete-btn"
              style="height: 100%;"
            >
              <!--v-if-->
              <span
                class="t-swipe-cell__text"
              >
                删除
              </span>
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              左滑三操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            <div
              class="t-swipe-cell__content btn favor-btn"
              style="height: 100%;"
            >
              <!--v-if-->
              <span
                class="t-swipe-cell__text"
              >
                收藏
              </span>
            </div>
            <div
              class="t-swipe-cell__content btn edit-btn"
              style="height: 100%;"
            >
              <!--v-if-->
              <span
                class="t-swipe-cell__text"
              >
                编辑
              </span>
            </div>
            <div
              class="t-swipe-cell__content btn delete-btn"
              style="height: 100%;"
            >
              <!--v-if-->
              <span
                class="t-swipe-cell__text"
              >
                删除
              </span>
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`SwipeCell > SwipeCell mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Swipecell 滑动操作
  </h1>
  <p
    class="summary"
  >
    用于承载列表中的更多操作，通过左右滑动来展示，按钮的宽度固定高度根据列表高度而变化。
  </p>
  
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        左滑动操作
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              左滑单操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            <div
              class="btn delete-btn"
            >
              删除
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              左滑单操作
              <!--v-if-->
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            <div
              class="btn delete-btn"
            >
              删除
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              左滑双操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            <div
              class="t-swipe-cell__content btn edit-btn"
              style="height: 100%;"
            >
              <!--v-if-->
              <span
                class="t-swipe-cell__text"
              >
                编辑
              </span>
            </div>
            <div
              class="t-swipe-cell__content btn delete-btn"
              style="height: 100%;"
            >
              <!--v-if-->
              <span
                class="t-swipe-cell__text"
              >
                删除
              </span>
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              左滑三操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            <div
              class="t-swipe-cell__content btn favor-btn"
              style="height: 100%;"
            >
              <!--v-if-->
              <span
                class="t-swipe-cell__text"
              >
                收藏
              </span>
            </div>
            <div
              class="t-swipe-cell__content btn edit-btn"
              style="height: 100%;"
            >
              <!--v-if-->
              <span
                class="t-swipe-cell__text"
              >
                编辑
              </span>
            </div>
            <div
              class="t-swipe-cell__content btn delete-btn"
              style="height: 100%;"
            >
              <!--v-if-->
              <span
                class="t-swipe-cell__text"
              >
                删除
              </span>
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        右滑动操作
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            <div
              class="btn favor-btn"
            >
              选择
            </div>
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              右滑单操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        左右滑操作
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            <div
              class="btn favor-btn"
            >
              选择
            </div>
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              左右滑操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            <div
              class="btn favor-btn"
            >
              收藏
            </div>
            <div
              class="btn delete-btn"
            >
              删除
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带图标的滑动操作
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              图标加文字横排
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            <div
              class="t-swipe-cell__content btn edit-btn"
              style="height: 100%;"
            >
              <svg
                class="t-icon t-icon-edit-1 t-swipe-cell__icon"
                fill="none"
                height="1em"
                style="font-size: 16px;"
                viewBox="0 0 16 16"
                width="1em"
              >
                <g
                  fill="currentColor"
                  fill-opacity="0.9"
                  opacity="0.9"
                >
                  <path
                    d="M14.13 4.95L10.9 1.71l.7-.71 3.25 3.24-.7.71zM5.97 13.11l-3.61.72a.3.3 0 01-.35-.35l.72-3.61 7.3-7.3 3.24 3.24-7.3 7.3zm5.89-7.3l-1.83-1.83-6.38 6.38-.46 2.29 2.29-.46 6.38-6.38zM15 11h-4v1h4v-1zM15 13H8.5v1H15v-1z"
                  />
                </g>
              </svg>
              <span
                class="t-swipe-cell__text"
              >
                编辑
              </span>
            </div>
            <div
              class="t-swipe-cell__content btn delete-btn"
              style="height: 100%;"
            >
              <svg
                class="t-icon t-icon-delete t-swipe-cell__icon"
                fill="none"
                height="1em"
                style="font-size: 16px;"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6 12V6h1v6H6zM9 6v6h1V6H9z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M10.5 3H14v1h-1v10a1 1 0 01-1 1H4a1 1 0 01-1-1V4H2V3h3.5V1.8c0-.44.36-.8.8-.8h3.4c.44 0 .8.36.8.8V3zm-4 0h3V2h-3v1zM4 4v10h8V4H4z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <span
                class="t-swipe-cell__text"
              >
                删除
              </span>
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              纯图标
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            <div
              class="t-swipe-cell__content btn edit-btn"
              style="height: 100%;"
            >
              <svg
                class="t-icon t-icon-edit-1 t-swipe-cell__icon"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <g
                  fill="currentColor"
                  fill-opacity="0.9"
                  opacity="0.9"
                >
                  <path
                    d="M14.13 4.95L10.9 1.71l.7-.71 3.25 3.24-.7.71zM5.97 13.11l-3.61.72a.3.3 0 01-.35-.35l.72-3.61 7.3-7.3 3.24 3.24-7.3 7.3zm5.89-7.3l-1.83-1.83-6.38 6.38-.46 2.29 2.29-.46 6.38-6.38zM15 11h-4v1h4v-1zM15 13H8.5v1H15v-1z"
                  />
                </g>
              </svg>
              <!--v-if-->
            </div>
            <div
              class="t-swipe-cell__content btn delete-btn"
              style="height: 100%;"
            >
              <svg
                class="t-icon t-icon-delete t-swipe-cell__icon"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6 12V6h1v6H6zM9 6v6h1V6H9z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M10.5 3H14v1h-1v10a1 1 0 01-1 1H4a1 1 0 01-1-1V4H2V3h3.5V1.8c0-.44.36-.8.8-.8h3.4c.44 0 .8.36.8.8V3zm-4 0h3V2h-3v1zM4 4v10h8V4H4z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <!--v-if-->
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-swipe-cell"
      >
        <div
          style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
        >
          <div
            class="t-swipe-cell__left"
            style="width: auto;"
          >
            
            
          </div>
          
          <div
            class="t-cell t-cell--middle"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              图标加文字竖排
              <!--v-if-->
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
          <div
            class="t-swipe-cell__right"
            style="width: auto;"
          >
            
            <div
              class="t-swipe-cell__content btn edit-btn vertical"
              style="height: 100%;"
            >
              <svg
                class="t-icon t-icon-edit-1 t-swipe-cell__icon"
                fill="none"
                height="1em"
                style="font-size: 16px;"
                viewBox="0 0 16 16"
                width="1em"
              >
                <g
                  fill="currentColor"
                  fill-opacity="0.9"
                  opacity="0.9"
                >
                  <path
                    d="M14.13 4.95L10.9 1.71l.7-.71 3.25 3.24-.7.71zM5.97 13.11l-3.61.72a.3.3 0 01-.35-.35l.72-3.61 7.3-7.3 3.24 3.24-7.3 7.3zm5.89-7.3l-1.83-1.83-6.38 6.38-.46 2.29 2.29-.46 6.38-6.38zM15 11h-4v1h4v-1zM15 13H8.5v1H15v-1z"
                  />
                </g>
              </svg>
              <span
                class="t-swipe-cell__text"
              >
                编辑
              </span>
            </div>
            <div
              class="t-swipe-cell__content btn delete-btn vertical"
              style="height: 100%;"
            >
              <svg
                class="t-icon t-icon-delete t-swipe-cell__icon"
                fill="none"
                height="1em"
                style="font-size: 16px;"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M6 12V6h1v6H6zM9 6v6h1V6H9z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M10.5 3H14v1h-1v10a1 1 0 01-1 1H4a1 1 0 01-1-1V4H2V3h3.5V1.8c0-.44.36-.8.8-.8h3.4c.44 0 .8.36.8.8V3zm-4 0h3V2h-3v1zM4 4v10h8V4H4z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <span
                class="t-swipe-cell__text"
              >
                删除
              </span>
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
  
  <!-- &lt;event /&gt; -->
</div>
`;

exports[`SwipeCell > SwipeCell rightVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
>
  <div
    class="tdesign-mobile-demo-block__header"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
    >
      右滑动操作
    </p>
  </div>
  <div
    class="tdesign-mobile-demo-block__slot"
  >
    
    <div
      class="t-swipe-cell"
    >
      <div
        style="position: relative; transition: transform .6s cubic-bezier(0.18, 0.89, 0.32, 1); transform: translate3d(0px, 0, 0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          
          <div
            class="btn favor-btn"
          >
            选择
          </div>
          
        </div>
        
        <div
          class="t-cell t-cell--middle"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            右滑单操作
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__note"
          >
            辅助信息
          </div>
          <!--v-if-->
        </div>
        
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          
        </div>
      </div>
    </div>
    
  </div>
</div>
`;
